[package]
name = "the-rust-programming-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ansi_term = "0.12.1"

[[bin]]
name = "2"
path = "src/bin/2_guessing_game/project_guessing_game.rs"
[[bin]]
name = "3_1"
path = "src/bin/3_common_programming_concepts/3_1_variables_and_mutability.rs"
[[bin]]
name = "3_2"
path = "src/bin/3_common_programming_concepts/3_2_data_types.rs"
[[bin]]
name = "3_3"
path = "src/bin/3_common_programming_concepts/3_3_functions.rs"
[[bin]]
name = "3_4"
path = "src/bin/3_common_programming_concepts/3_4_comments.rs"
[[bin]]
name = "3_5"
path = "src/bin/3_common_programming_concepts/3_5_control_flow.rs"
[[bin]]
name = "4_1"
path = "src/bin/4_understanding_ownership/4_1_what_is_ownership.rs"
[[bin]]
name = "4_2"
path = "src/bin/4_understanding_ownership/4_2_references_and_borrowing.rs"
[[bin]]
name = "4_3"
path = "src/bin/4_understanding_ownership/4_3_the_slice_type.rs"
[[bin]]
name = "5_1"
path = "src/bin/5_using_structs_to_structure_related_data/5_1_defining_and_instantiating_structs.rs"
[[bin]]
name = "5_2"
path = "src/bin/5_using_structs_to_structure_related_data/5_2_an_example_program_using_structs.rs"
[[bin]]
name = "5_3"
path = "src/bin/5_using_structs_to_structure_related_data/5_3_method_syntax.rs"
[[bin]]
name = "6_1"
path = "src/bin/6_enums_and_pattern_matching/6_1_defining_an_enum.rs"
[[bin]]
name = "6_2"
path = "src/bin/6_enums_and_pattern_matching/6_2_the_match_control_flow_construct.rs"
[[bin]]
name = "6_3"
path = "src/bin/6_enums_and_pattern_matching/6_3_concise_control_flow_with_if_let.rs"
