[package]
name = "the-rust-programming-language"
version = "0.1.0"
edition = "2021"
default-run = "root"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ansi_term = "0.12.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
cuckoofilter = "0.5.0"

[[bin]]
name = "root"
path = "src/main.rs"
[[bin]]
name = "2"
path = "src/bin/2_guessing_game/project_guessing_game.rs"
[[bin]]
name = "3_1"
path = "src/bin/3_common_programming_concepts/3_1_variables_and_mutability.rs"
[[bin]]
name = "3_2"
path = "src/bin/3_common_programming_concepts/3_2_data_types.rs"
[[bin]]
name = "3_3"
path = "src/bin/3_common_programming_concepts/3_3_functions.rs"
[[bin]]
name = "3_4"
path = "src/bin/3_common_programming_concepts/3_4_comments.rs"
[[bin]]
name = "3_5"
path = "src/bin/3_common_programming_concepts/3_5_control_flow.rs"
[[bin]]
name = "4_1"
path = "src/bin/4_understanding_ownership/4_1_what_is_ownership.rs"
[[bin]]
name = "4_2"
path = "src/bin/4_understanding_ownership/4_2_references_and_borrowing.rs"
[[bin]]
name = "4_3"
path = "src/bin/4_understanding_ownership/4_3_the_slice_type.rs"
[[bin]]
name = "5_1"
path = "src/bin/5_using_structs_to_structure_related_data/5_1_defining_and_instantiating_structs.rs"
[[bin]]
name = "5_2"
path = "src/bin/5_using_structs_to_structure_related_data/5_2_an_example_program_using_structs.rs"
[[bin]]
name = "5_3"
path = "src/bin/5_using_structs_to_structure_related_data/5_3_method_syntax.rs"
[[bin]]
name = "6_1"
path = "src/bin/6_enums_and_pattern_matching/6_1_defining_an_enum.rs"
[[bin]]
name = "6_2"
path = "src/bin/6_enums_and_pattern_matching/6_2_the_match_control_flow_construct.rs"
[[bin]]
name = "6_3"
path = "src/bin/6_enums_and_pattern_matching/6_3_concise_control_flow_with_if_let.rs"
[[bin]]
name = "8_1"
path = "src/bin/8_common_collections/8_1_storing_lists_of_values_with_vectors.rs"
[[bin]]
name = "8_2"
path = "src/bin/8_common_collections/8_2_storing_utf8_encoded_text_with_strings.rs"
[[bin]]
name = "8_3"
path = "src/bin/8_common_collections/8_3_storing_keys_with_associated_values_in_hash_maps.rs"
[[bin]]
name = "9_1"
path = "src/bin/9_error_handling/9_1_unrecoverable_errors_with_panic.rs"
[[bin]]
name = "9_2"
path = "src/bin/9_error_handling/9_2_recoverable_errors_with_result.rs"
[[bin]]
name = "9_3"
path = "src/bin/9_error_handling/9_3_to_panic_or_not_to_panic.rs"
[[bin]]
name = "10_1"
path = "src/bin/10_generic_types_traits_and_lifetimes/10_1_generic_data_types.rs"
[[bin]]
name = "10_2"
path = "src/bin/10_generic_types_traits_and_lifetimes/10_2_traits_defining_shared_behavior.rs"
[[bin]]
name = "10_3"
path = "src/bin/10_generic_types_traits_and_lifetimes/10_3_validating_references_with_lifetimes.rs"
[[bin]]
name = "12"
path = "src/bin/12_projects_building_a_command_line_program/minigrep.rs"
[[bin]]
name = "13_1"
path = "src/bin/13_functional_lang_features_iterators_and_closures/13_1_closures.rs"
[[bin]]
name = "13_2"
path = "src/bin/13_functional_lang_features_iterators_and_closures/13_2_iterators.rs"
[[bin]]
name = "13_3"
path = "src/bin/13_functional_lang_features_iterators_and_closures/13_3_improving_our_io_project.rs"
[[bin]]
name = "13_4"
path = "src/bin/13_functional_lang_features_iterators_and_closures/13_4_comparing_performance_loops_vs_iterators.rs"
[[bin]]
name = "15_1"
path = "src/bin/15_smart_pointers/15_1_box.rs"
[[bin]]
name = "15_2"
path = "src/bin/15_smart_pointers/15_2_deref_trait.rs"
[[bin]]
name = "15_3"
path = "src/bin/15_smart_pointers/15_3_drop_trait.rs"
[[bin]]
name = "15_4"
path = "src/bin/15_smart_pointers/15_4_rc.rs"
[[bin]]
name = "15_5"
path = "src/bin/15_smart_pointers/15_5_refcell.rs"
[[bin]]
name = "15_6"
path = "src/bin/15_smart_pointers/15_6_reference_cycles.rs"
[[bin]]
name = "16_1"
path = "src/bin/16_fearless_concurrency/16_1_using_threads.rs"
[[bin]]
name = "16_2"
path = "src/bin/16_fearless_concurrency/16_2_message_between_threads.rs"
[[bin]]
name = "16_3"
path = "src/bin/16_fearless_concurrency/16_3_shared_state_concurrency.rs"
[[bin]]
name = "16_4"
path = "src/bin/16_fearless_concurrency/16_4_sync_and_send_traits.rs"
[[bin]]
name = "17_1"
path = "src/bin/17_oop_features_of_rust/17_1_characteristics_of_Ool.rs"
[[bin]]
name = "17_2"
path = "src/bin/17_oop_features_of_rust/17_2_trait_object.rs"
[[bin]]
name = "17_3"
path = "src/bin/17_oop_features_of_rust/17_3_impl_an_oo_design_pattern.rs"
[[bin]]
name = "18_1"
path = "src/bin/18_patterns_and_matching/18_1_all_the_places_patterns_can_be_used.rs"
[[bin]]
name = "18_2"
path = "src/bin/18_patterns_and_matching/18_2_refutability_whether_a_pattern_might_fail_to_match.rs"
[[bin]]
name = "18_3"
path = "src/bin/18_patterns_and_matching/18_3_pattern_syntax.rs"
[[bin]]
name = "19_1"
path = "src/bin/19_advanced_features/19_1_unsafe_rust.rs"
[[bin]]
name = "19_2"
path = "src/bin/19_advanced_features/19_2_advanced_traits.rs"
[[bin]]
name = "19_3"
path = "src/bin/19_advanced_features/19_3_advanced_types.rs"
[[bin]]
name = "19_4"
path = "src/bin/19_advanced_features/19_4_advanced_functions_and_closures.rs"
[[bin]]
name = "19_5"
path = "src/bin/19_advanced_features/19_5_macros.rs"
[[bin]]
name = "20_1"
path = "src/bin/20_projects_building_a_multithread_web_server/20_1_single_thread_web_server.rs"
[[bin]]
name = "20_2"
path = "src/bin/20_projects_building_a_multithread_web_server/20_2_multi_threads_web_server.rs"
[[bin]]
name = "x_macros"
path = "src/bin/x_macros/macros.rs"
