[package]
name = "the-rust-programming-language"
version = "0.1.0"
edition = "2021"
default-run = "root"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.5"
ansi_term = "0.12.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
cuckoofilter = "0.5.0"

[[bin]]
name = "root"
path = "src/main.rs"
[[bin]]
name = "guessing-game"
path = "src/bin/2_guessing_game/project_guessing_game.rs"
[[bin]]
name = "var-and-mut"
path = "src/bin/3_common_programming_concepts/3_1_variables_and_mutability.rs"
[[bin]]
name = "data-types"
path = "src/bin/3_common_programming_concepts/3_2_data_types.rs"
[[bin]]
name = "fn"
path = "src/bin/3_common_programming_concepts/3_3_functions.rs"
[[bin]]
name = "comments"
path = "src/bin/3_common_programming_concepts/3_4_comments.rs"
[[bin]]
name = "control-flow"
path = "src/bin/3_common_programming_concepts/3_5_control_flow.rs"
[[bin]]
name = "ownership"
path = "src/bin/4_understanding_ownership/4_1_what_is_ownership.rs"
[[bin]]
name = "ref-and-borrow"
path = "src/bin/4_understanding_ownership/4_2_references_and_borrowing.rs"
[[bin]]
name = "slice-type"
path = "src/bin/4_understanding_ownership/4_3_the_slice_type.rs"
[[bin]]
name = "struct"
path = "src/bin/5_using_structs_to_structure_related_data/5_1_defining_and_instantiating_structs.rs"
[[bin]]
name = "struct-example"
path = "src/bin/5_using_structs_to_structure_related_data/5_2_an_example_program_using_structs.rs"
[[bin]]
name = "method"
path = "src/bin/5_using_structs_to_structure_related_data/5_3_method_syntax.rs"
[[bin]]
name = "enum"
path = "src/bin/6_enums_and_pattern_matching/6_1_defining_an_enum.rs"
[[bin]]
name = "match"
path = "src/bin/6_enums_and_pattern_matching/6_2_the_match_control_flow_construct.rs"
[[bin]]
name = "if-let"
path = "src/bin/6_enums_and_pattern_matching/6_3_concise_control_flow_with_if_let.rs"
[[bin]]
name = "vec"
path = "src/bin/8_common_collections/8_1_storing_lists_of_values_with_vectors.rs"
[[bin]]
name = "string"
path = "src/bin/8_common_collections/8_2_storing_utf8_encoded_text_with_strings.rs"
[[bin]]
name = "hashmap"
path = "src/bin/8_common_collections/8_3_storing_keys_with_associated_values_in_hash_maps.rs"
[[bin]]
name = "error"
path = "src/bin/9_error_handling/9_1_unrecoverable_errors_with_panic.rs"
[[bin]]
name = "result"
path = "src/bin/9_error_handling/9_2_recoverable_errors_with_result.rs"
[[bin]]
name = "panic"
path = "src/bin/9_error_handling/9_3_to_panic_or_not_to_panic.rs"
[[bin]]
name = "generic"
path = "src/bin/10_generic_types_traits_and_lifetimes/10_1_generic_data_types.rs"
[[bin]]
name = "trait"
path = "src/bin/10_generic_types_traits_and_lifetimes/10_2_traits_defining_shared_behavior.rs"
[[bin]]
name = "lifetime"
path = "src/bin/10_generic_types_traits_and_lifetimes/10_3_validating_references_with_lifetimes.rs"
[[bin]]
name = "minigrep"
path = "src/bin/12_projects_building_a_command_line_program/minigrep.rs"
[[bin]]
name = "closure"
path = "src/bin/13_functional_lang_features_iterators_and_closures/13_1_closures.rs"
[[bin]]
name = "iterator"
path = "src/bin/13_functional_lang_features_iterators_and_closures/13_2_iterators.rs"
[[bin]]
name = "io-project"
path = "src/bin/13_functional_lang_features_iterators_and_closures/13_3_improving_our_io_project.rs"
[[bin]]
name = "loop-vs-iterator"
path = "src/bin/13_functional_lang_features_iterators_and_closures/13_4_comparing_performance_loops_vs_iterators.rs"
[[bin]]
name = "box"
path = "src/bin/15_smart_pointers/15_1_box.rs"
[[bin]]
name = "deref"
path = "src/bin/15_smart_pointers/15_2_deref_trait.rs"
[[bin]]
name = "drop"
path = "src/bin/15_smart_pointers/15_3_drop_trait.rs"
[[bin]]
name = "rc"
path = "src/bin/15_smart_pointers/15_4_rc.rs"
[[bin]]
name = "refcell"
path = "src/bin/15_smart_pointers/15_5_refcell.rs"
[[bin]]
name = "ref-cycle"
path = "src/bin/15_smart_pointers/15_6_reference_cycles.rs"
[[bin]]
name = "thread"
path = "src/bin/16_fearless_concurrency/16_1_using_threads.rs"
[[bin]]
name = "message"
path = "src/bin/16_fearless_concurrency/16_2_message_between_threads.rs"
[[bin]]
name = "concurrency"
path = "src/bin/16_fearless_concurrency/16_3_shared_state_concurrency.rs"
[[bin]]
name = "sync-and-send"
path = "src/bin/16_fearless_concurrency/16_4_sync_and_send_traits.rs"
[[bin]]
name = "ool"
path = "src/bin/17_oop_features_of_rust/17_1_characteristics_of_Ool.rs"
[[bin]]
name = "trait-object"
path = "src/bin/17_oop_features_of_rust/17_2_trait_object.rs"
[[bin]]
name = "oo-design-pattern"
path = "src/bin/17_oop_features_of_rust/17_3_impl_an_oo_design_pattern.rs"
[[bin]]
name = "more-match"
path = "src/bin/18_patterns_and_matching/18_1_all_the_places_patterns_can_be_used.rs"
[[bin]]
name = "fail-to-match"
path = "src/bin/18_patterns_and_matching/18_2_refutability_whether_a_pattern_might_fail_to_match.rs"
[[bin]]
name = "pattern"
path = "src/bin/18_patterns_and_matching/18_3_pattern_syntax.rs"
[[bin]]
name = "unsafe"
path = "src/bin/19_advanced_features/19_1_unsafe_rust.rs"
[[bin]]
name = "advanced-traits"
path = "src/bin/19_advanced_features/19_2_advanced_traits.rs"
[[bin]]
name = "advanced-types"
path = "src/bin/19_advanced_features/19_3_advanced_types.rs"
[[bin]]
name = "advanced-fn-and-closure"
path = "src/bin/19_advanced_features/19_4_advanced_functions_and_closures.rs"
[[bin]]
name = "macros"
path = "src/bin/19_advanced_features/19_5_macros.rs"
[[bin]]
name = "s-web-server"
path = "src/bin/20_projects_building_a_multithread_web_server/20_1_single_thread_web_server.rs"
[[bin]]
name = "m-web-server"
path = "src/bin/20_projects_building_a_multithread_web_server/20_2_multi_threads_web_server.rs"
[[bin]]
name = "x_macros"
path = "src/bin/x_macros/macros.rs"
