[package]
name = "dive-into-design-patterns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "factory-method-render-dialog"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/1_factory_method/code/dialog_rendering/main.rs"
[[example]]
name = "factory-method-maze-game"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/1_factory_method/code/maze_game/main.rs"
[[example]]
name = "abstract-factory-app"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/2_abstract_factory/code/app/main.rs"
[[example]]
name = "abstract-factory-app-dyn"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/2_abstract_factory/code/app_dyn/main.rs"
[[example]]
name = "builder"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/3_builder/code/main.rs"



