[package]
name = "dive-into-design-patterns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
draw = "0.3"
memory-stats = "1"
rand = "0.8"
cursive = {version = "0.20.0", default-features = false, features = ["crossterm-backend"]}

[[example]]
name = "factory-method-render-dialog"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/1_factory_method/code/dialog_rendering/main.rs"
[[example]]
name = "factory-method-maze-game"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/1_factory_method/code/maze_game/main.rs"
[[example]]
name = "abstract-factory-app"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/2_abstract_factory/code/app/main.rs"
[[example]]
name = "abstract-factory-app-dyn"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/2_abstract_factory/code/app_dyn/main.rs"
[[example]]
name = "builder"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/3_builder/code/main.rs"
[[example]]
name = "prototype"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/4_prototype/code/main.rs"
[[example]]
name = "singleton-safe"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/5_singleton/code/safe.rs"
[[example]]
name = "singleton-lazy"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/5_singleton/code/lazy.rs"
[[example]]
name = "singleton-mutex"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/5_singleton/code/mutex.rs"
[[example]]
name = "singleton-once-lock"
path = "examples/6_catalog_of_design_patterns/1_creational_design_patterns/5_singleton/code/once_lock.rs"
[[example]]
name = "adapter"
path = "examples/6_catalog_of_design_patterns/2_structural_design_patterns/1_adapter/code/main.rs"
[[example]]
name = "bridge"
path = "examples/6_catalog_of_design_patterns/2_structural_design_patterns/2_bridge/code/main.rs"
[[example]]
name = "composite"
path = "examples/6_catalog_of_design_patterns/2_structural_design_patterns/3_composite/code/main.rs"
[[example]]
name = "decorator"
path = "examples/6_catalog_of_design_patterns/2_structural_design_patterns/4_decorator/code/main.rs"
[[example]]
name = "facade"
path = "examples/6_catalog_of_design_patterns/2_structural_design_patterns/5_facade/code/main.rs"
[[example]]
name = "flyweight"
path = "examples/6_catalog_of_design_patterns/2_structural_design_patterns/6_flyweight/code/main.rs"
[[example]]
name = "proxy"
path = "examples/6_catalog_of_design_patterns/2_structural_design_patterns/7_proxy/code/main.rs"
[[example]]
name = "cor"
path = "examples/6_catalog_of_design_patterns/3_behavioral_design_patterns/1_chain_of_responsibility/code/main.rs"
[[example]]
name = "command"
path = "examples/6_catalog_of_design_patterns/3_behavioral_design_patterns/2_command/code/main.rs"
[[example]]
name = "iterator"
path = "examples/6_catalog_of_design_patterns/3_behavioral_design_patterns/3_iterator/code/main.rs"
[[example]]
name = "mediator-rc-refcell"
path = "examples/6_catalog_of_design_patterns/3_behavioral_design_patterns/4_mediator/code/mediator-rc-refcell/main.rs"
[[example]]
name = "mediator-top-down"
path = "examples/6_catalog_of_design_patterns/3_behavioral_design_patterns/4_mediator/code/mediator-top-down/main.rs"


