[package]
name = "rust-design-patterns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1"
libc = "0.2"
log = "0.4"


[[example]]
name = "2_1"
path = "examples/2_idioms/2_1_use_borrowed_types_for_arguments/main.rs"
[[example]]
name = "2_2"
path = "examples/2_idioms/2_2_concatenating_strings_with_format/main.rs"
[[example]]
name = "2_3"
path = "examples/2_idioms/2_3_constructor/main.rs"
[[example]]
name = "2_4"
path = "examples/2_idioms/2_4_the_default_trait/main.rs"
[[example]]
name = "2_5"
path = "examples/2_idioms/2_5_collections_are_smart_pointers/main.rs"
[[example]]
name = "2_6"
path = "examples/2_idioms/2_6_finalisation_in_destructors/main.rs"
[[example]]
name = "2_7"
path = "examples/2_idioms/2_7_mem_take_or_replace/main.rs"
[[example]]
name = "2_8"
path = "examples/2_idioms/2_8_on_stack_dynamic_dispatch/main.rs"
[[example]]
name = "2_9"
path = "examples/2_idioms/2_9_foreign_function_interface/main.rs"
[[example]]
name = "2_10"
path = "examples/2_idioms/2_10_iterating_over_an_option/main.rs"
[[example]]
name = "2_11"
path = "examples/2_idioms/2_11_pass_variables_to_closure/main.rs"
[[example]]
name = "2_12"
path = "examples/2_idioms/2_12_privacy_for_extensibility/main.rs"
[[example]]
name = "2_13"
path = "examples/2_idioms/2_13_easy_doc_initialization/main.rs"
[[example]]
name = "2_14"
path = "examples/2_idioms/2_14_temporary_mutability/main.rs"
[[example]]
name = "2_15"
path = "examples/2_idioms/2_15_return_consumed_arg_on_err/main.rs"
[[example]]
name = "3_1_1"
path = "examples/3_design_patterns/3_1_behavioural/3_1_1_command/main.rs"
[[example]]
name = "3_1_2"
path = "examples/3_design_patterns/3_1_behavioural/3_1_2_interpreter/main.rs"
[[example]]
name = "3_1_3"
path = "examples/3_design_patterns/3_1_behavioural/3_1_3_newtype/main.rs"
[[example]]
name = "3_1_4"
path = "examples/3_design_patterns/3_1_behavioural/3_1_4_raii_guards/main.rs"
[[example]]
name = "3_1_5"
path = "examples/3_design_patterns/3_1_behavioural/3_1_5_strategy/main.rs"
[[example]]
name = "3_1_6"
path = "examples/3_design_patterns/3_1_behavioural/3_1_6_visitor/main.rs"
[[example]]
name = "3_2_1"
path = "examples/3_design_patterns/3_2_creational/3_2_1_builder/main.rs"
[[example]]
name = "3_2_2"
path = "examples/3_design_patterns/3_2_creational/3_2_2_fold/main.rs"
[[example]]
name = "3_3_1"
path = "examples/3_design_patterns/3_3_structural/3_3_1_compose_structs/main.rs"
[[example]]
name = "3_3_2"
path = "examples/3_design_patterns/3_3_structural/3_3_2_prefer_small_crates/main.rs"
[[example]]
name = "3_3_3"
path = "examples/3_design_patterns/3_3_structural/3_3_3_contain_unsafety_in_small_modules/main.rs"
[[example]]
name = "3_4_1"
path = "examples/3_design_patterns/3_4_ffi/3_4_1_object_based_apis/main.rs"
[[example]]
name = "3_4_2"
path = "examples/3_design_patterns/3_4_ffi/3_4_2_type_consolidation_into_wrappers/main.rs"
[[example]]
name = "4_1"
path = "examples/4_anti_patterns/4_1_clone_to_satisfy_the_borrow_checker/main.rs"
[[example]]
name = "4_2"
path = "examples/4_anti_patterns/4_2_deny_warnings/main.rs"
[[example]]
name = "4_3"
path = "examples/4_anti_patterns/4_3_deref_polymorphism/main.rs"
[[example]]
name = "5_1"
path = "examples/5_functional_programming/5_1_programming_paradigms/main.rs"
[[example]]
name = "5_2"
path = "examples/5_functional_programming/5_2_generics_as_type_classes/main.rs"
[[example]]
name = "5_3"
path = "examples/5_functional_programming/5_3_lenses_and_prisms/main.rs"


